fixes left-hand alignment of label.

--- a/packages/frontend/app/styles/components/assign-students/manager.scss
+++ b/packages/frontend/app/styles/components/assign-students/manager.scss
@@ -28,7 +28,7 @@
 
     label {
       @include cm.ilios-label;
-      margin-right: 0.5rem;
+      margin: 0 0.5rem;
     }
 
     .done {
